# go-game-analyzer

./: .gitignore  CMakeLists.txt  README.md  config.json  config.linux_raw.json  config.linux_with_katago.json  config.macos-linux.json  config.windows.json  config.windows_raw.json  config.windows_with_katago.json  install-dependencies.sh  mingw-w64-toolchain.cmake  settings.cpu.json  settings.gpu.json
.cache/clangd/index/: SDL.h.434794D645A84775.idx  SDL_assert.h.62632F61E15DC11D.idx  SDL_asyncio.h.C333EAD48BF08512.idx  SDL_atomic.h.FEF2B57DF0E9AA62.idx  SDL_audio.h.9E3FD2A150E5F8D5.idx  SDL_begin_code.h.E87A03C978EBD8E3.idx  SDL_bits.h.5B27BF87185A0904.idx  SDL_blendmode.h.FFBFC5C091750989.idx  SDL_camera.h.34EF6615C0377468.idx  SDL_clipboard.h.2616FF15030E0452.idx  SDL_close_code.h.A58C470AEBB6AF14.idx  SDL_cpuinfo.h.1EF5FA699B8DE212.idx  SDL_dialog.h.78A85D0633BD7E59.idx  SDL_dlopennote.h.C286EEAA0E672126.idx  SDL_endian.h.3A5E4FD320ADD339.idx  SDL_error.h.3546A04836289092.idx  SDL_events.h.5E421F83D4A389D1.idx  SDL_filesystem.h.0A1840B750ADA896.idx  SDL_gamepad.h.B367750411DA5959.idx  SDL_gpu.h.FF48696A2EF2DD61.idx  SDL_guid.h.0A5B3ABC63FDF7F9.idx  SDL_haptic.h.9F18FDF6729F7ABB.idx  SDL_hidapi.h.ABC2A52145EF3590.idx  SDL_hints.h.5309D34C5F84DA65.idx  SDL_init.h.B701522EFD9C761D.idx  SDL_iostream.h.1F3E7680655BF4C9.idx  SDL_joystick.h.BD4F08844E1E03FE.idx  SDL_keyboard.h.8C48123A7971255E.idx  SDL_keycode.h.5B559C5782285D5D.idx  SDL_loadso.h.A82DD9644909EE73.idx  SDL_locale.h.157C843CC6011A5E.idx  SDL_log.h.FF2233946A164CEF.idx  SDL_messagebox.h.2159027143922168.idx  SDL_metal.h.A1509F1DAFFD9791.idx  SDL_misc.h.EEB7DB91A2CCB775.idx  SDL_mixer.h.DC2DA6F8F528B33A.idx  SDL_mouse.h.551A2416129D532B.idx  SDL_mutex.h.179D3EF166DA097E.idx  SDL_oldnames.h.876EC556670FD556.idx  SDL_pen.h.12732A818E86FB0B.idx  (+49 more)
.github/workflows/: build.yml
assets/themes/: dark-neon.json  dark-orange.json  purple-dark.json  purple-light.json
lib/include/SDL2/: SDL_revision.h
lib/include/SDL3/: SDL_revision.h
lib/linux/: libSDL3_mixer.so.0.1.0  libSDL3_ttf.so.0.3.0
scripts/: download-katago-linux.sh  download-katago-windows.sh  download-katago.sh  generate-symlinks.sh  mingw-w64-toolchain.cmake  run.sh
src/: actions.hpp  base.hpp  board.cpp  board.hpp  compute.cpp  compute.hpp  config.cpp  config.hpp  draw.cpp  draw.hpp  error.cpp  error.hpp  helpers.hpp  katago.cpp  katago.hpp  katago_engine.cpp  katago_engine.hpp  katago_settings.cpp  katago_settings.hpp  main.cpp  rules.cpp  rules.hpp  sound.cpp  sound.hpp  state.cpp  state.hpp  test.hpp  theme.cpp  theme.hpp  undo.hpp  utils.hpp
